--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>Gallery</p>
                 <div class="portfolio-links">
                   <a href="assets/img/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://mugambijavan.github.io/Gallery/" class="" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a target="_blank" href="https://mugambijavan.github.io/Gallery/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -82,7 +82,7 @@
                 <p>Plantex </p>
                 <div class="portfolio-links">
                   <a href="assets/img/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="https://mugambijavan.github.io/plants-website-simple/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a target="_blank" href="https://mugambijavan.github.io/plants-website-simple/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
