--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h4>Web 1</h4>
                 <p>Gallery</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                   <a target="_blank" href="https://mugambijavan.github.io/Gallery/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -67,7 +67,7 @@
                 <h4>Web 2</h4>
                 <p>DriveConnect</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://drive-connect.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -81,7 +81,7 @@
                 <h4>Web 3</h4>
                 <p>Plantex </p>
                 <div class="portfolio-links">
-                  <a href="assets/img/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a target="_blank" href="https://mugambijavan.github.io/plants-website-simple/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -95,7 +95,7 @@
                 <h4>Web 4</h4>
                 <p>Profile-Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/12.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/12.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://mugambijavan.github.io/ProfileCard/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                 <h4>Web 5</h4>
                 <p>Weather App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://mugambijavan.github.io/weather-web-app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -123,7 +123,7 @@
                 <h4>Web 6</h4>
                 <p>One Page</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://mugambijavan.github.io/One-Page/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -137,7 +137,7 @@
                 <h4>Web 7</h4>
                 <p>Portfolio</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://bhakitah.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -151,7 +151,7 @@
                 <h4>Web 8</h4>
                 <p>Insight</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://insightwebsite.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -165,7 +165,7 @@
                 <h4>Web 9</h4>
                 <p>Oval Construction</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://mugambijavan.github.io/Oval-Construction/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -179,7 +179,7 @@
                 <h4>Web 10</h4>
                 <p>TechTrove</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://tech-trove.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -193,7 +193,7 @@
                 <h4>Web 11</h4>
                 <p>MyVerse</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/7.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/7.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                   <a href="https://my-verse-one.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -207,7 +207,7 @@
                 <h4>Web 12</h4>
                 <p>One Page</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://mugambijavan.github.io/404-page/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
