--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
   <footer id="footer">
     <div class="container">
       <div class="social-links">
-        <a href="https://twitter.com/mugambi_javan" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://wa.me/+254727761646" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-        <a href="https://www.instagram.com/_javoh._/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/mugambijavan" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/javan-mugambi-2351a81b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://t.me/KamiriJavan" class="telegram"><i class="bx bxl-telegram"></i></a>
-        <a href="mailto:mugambijavan@gmail.com" class="gmail"><i class="bx bxl-gmail"></i></a>
+        <a target="_blank" href="https://twitter.com/mugambi_javan" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a target="_blank" href="https://wa.me/+254727761646" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a target="_blank" href="https://www.instagram.com/_javoh._/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a target="_blank" href="https://github.com/mugambijavan" class="github"><i class="bx bxl-github"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/javan-mugambi-2351a81b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a target="_blank" href="https://t.me/KamiriJavan" class="telegram"><i class="bx bxl-telegram"></i></a>
+        <a target="_blank" href="mailto:mugambijavan@gmail.com" class="gmail"><i class="bx bxl-gmail"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span></span></strong>. All Rights Reserved
