--- a/index.html
+++ b/index.html
@@ -214,6 +214,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/13.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 13</h4>
+                <p>Hotel Website</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/13.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://equisitetastes.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
