sirikwa added and footer deleted

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
 
         
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/5.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 1</h4>
+                <p>Sirikwa Dairies</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://sirikwadairies.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -221,26 +234,6 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="social-links">
-        <a target="_blank" href="https://twitter.com/mugambi_javan" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a target="_blank" href="https://wa.me/+254727761646" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-        <a target="_blank" href="https://www.instagram.com/_javoh._/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a target="_blank" href="https://github.com/mugambijavan" class="github"><i class="bx bxl-github"></i></a>
-        <a target="_blank" href="https://www.linkedin.com/in/javan-mugambi-2351a81b0/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a target="_blank" href="https://t.me/KamiriJavan" class="telegram"><i class="bx bxl-telegram"></i></a>
-        <a target="_blank" href="mailto:mugambijavan@gmail.com" class="gmail"><i class="bx bxl-gmail"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span></span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        Designed by <a href="bhakitah.co.ke">Mugambi Javan Nyaga</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
