--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Web 2</h4>
                 <p>Plantex </p>
                 <div class="portfolio-links">
                   <a href="assets/img/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -79,7 +79,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/12.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 4</h4>
+                <h4>Web 3</h4>
                 <p>Profile-Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/12.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -93,7 +93,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 5</h4>
+                <h4>Web 4</h4>
                 <p>One Page</p>
                 <div class="portfolio-links">
                   <a href="assets/img/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -107,7 +107,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/11.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 6</h4>
+                <h4>Web 5</h4>
                 <p>Portfolio</p>
                 <div class="portfolio-links">
                   <a href="assets/img/11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -121,7 +121,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 7</h4>
+                <h4>Web 6</h4>
                 <p>Insight</p>
                 <div class="portfolio-links">
                   <a href="assets/img/9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -135,7 +135,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 8</h4>
+                <h4>Web 7</h4>
                 <p>Oval Construction</p>
                 <div class="portfolio-links">
                   <a href="assets/img/10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -149,7 +149,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 9</h4>
+                <h4>Web 8</h4>
                 <p>TechTrove</p>
                 <div class="portfolio-links">
                   <a href="assets/img/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -163,7 +163,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 10</h4>
+                <h4>Web 9</h4>
                 <p>MyVerse</p>
                 <div class="portfolio-links">
                   <a href="assets/img/7.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
@@ -177,7 +177,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 11</h4>
+                <h4>Web 10</h4>
                 <p>One Page</p>
                 <div class="portfolio-links">
                   <a href="assets/img/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
@@ -191,11 +191,39 @@
             <div class="portfolio-wrap">
               <img src="assets/img/13.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 12</h4>
+                <h4>Web 11</h4>
                 <p>Hotel Website</p>
                 <div class="portfolio-links">
                   <a href="assets/img/13.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                   <a href="https://equisitetastes.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/14.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 12</h4>
+                <p>M-Fama Technologies</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/14.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://mfama.co.ke" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/15.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 13</h4>
+                <p>Events M-Fama</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/15.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://events.mfama.co.ke" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
