--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/16.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 14</h4>
+                <p>Patika</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/16.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://mugambijavan.github.io/patika/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
