--- a/index.html
+++ b/index.html
@@ -243,6 +243,62 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/17.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 15</h4>
+                <p>Bank</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/17.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://cahmyrrhbank.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/18.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 16</h4>
+                <p>STEM for life kenya Foundation</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/18.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://stemforlifekenya.org/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/19.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 17</h4>
+                <p>Stem for life kenya foundation</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/19.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://sflk.stemforlifekenya.org/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/5.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 18</h4>
+                <p>Drive Connect</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="https://drive-connect.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
