--- a/index.html
+++ b/index.html
@@ -299,6 +299,20 @@
                               </div>
                             </div>
 
+                            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                              <div class="portfolio-wrap">
+                                <img src="assets/img/20.png" class="img-fluid" alt="">
+                                <div class="portfolio-info">
+                                  
+                                  <p>Capture</p>
+                                  <div class="portfolio-links">
+                                    <a href="assets/img/20.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                                    <a href="https://capture-lp.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
         </div>
 
       </div>
