--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
+                                  <img src="assets/img/21.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">
+                                    
+                                    <p>BhakitahTech</p>
+                                    <div class="portfolio-links">
+                                      <a href="assets/img/21.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                                      <a href="https://bhakitah-tech.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
                                   <img src="assets/img/11.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">
                                     
