--- a/index.html
+++ b/index.html
@@ -200,6 +200,20 @@
 
                             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                               <div class="portfolio-wrap">
+                                <img src="assets/img/6.png" class="img-fluid" alt="">
+                                <div class="portfolio-info">
+                                  
+                                  <p>OnePage</p>
+                                  <div class="portfolio-links">
+                                    <a href="assets/img/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                                    <a href="https://mugambijavan.github.io/One-Page/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                              <div class="portfolio-wrap">
                                 <img src="assets/img/8.png" class="img-fluid" alt="">
                                 <div class="portfolio-info">
                                   
