--- a/index.html
+++ b/index.html
@@ -159,11 +159,23 @@
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
-                                  <img src="assets/img/9.png" class="img-fluid" alt="">
+                                  <img src="assets/img/23.png" class="img-fluid" alt="">
                                   <div class="portfolio-info">                                    
-                                    <p>Insight</p>
+                                    <p>Shoes Website</p>
                                     <div class="portfolio-links">
-                                      <a href="https://insightwebsite.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://shoe-web.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/10.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                  
+                                    <p>Oval Construction</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/Oval-Construction/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
                                   </div>
                                 </div>
