--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Projects Exhibit</h2>
-            <p>
-              "Software engineering is the art of creating something from nothing, the orchestration of logic and data to craft solutions that empower the present and shape the future."</p>        
+            <h2>Projects Exhibit</h2>      
         </div>
 
         
@@ -54,6 +52,9 @@
                                     <p>Sirikwa Dairies</p>
                                     <div class="portfolio-links">
                                       <a href="https://sirikwadairies.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://sirikwadairies.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -68,6 +69,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://mfama.co.ke" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mfama.co.ke"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -79,6 +83,9 @@
                                     <p>Events M-Fama</p>
                                     <div class="portfolio-links">
                                       <a href="https://events.mfama.co.ke" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://events.mfama.co.ke"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -92,6 +99,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://stemforlifekenya.org/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://stemforlifekenya.org/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -103,6 +113,9 @@
                                     <p>Stem for life kenya foundation</p>
                                     <div class="portfolio-links">
                                       <a href="https://sflk.stemforlifekenya.org/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://sflk.stemforlifekenya.org/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -116,6 +129,9 @@
                                     <div class="portfolio-links">
                                       <a target="_blank" href="https://mugambijavan.github.io/plants-website-simple/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/plants-website-simple/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -127,6 +143,9 @@
                                     <p>Profile-Card</p>
                                     <div class="portfolio-links">
                                       <a href="https://mugambijavan.github.io/ProfileCard/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/ProfileCard/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -141,6 +160,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://bhakitah-tech.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://bhakitah-tech.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -152,6 +174,9 @@
                                     <p>Portfolio</p>
                                     <div class="portfolio-links">
                                       <a href="https://bhakitah.co.ke/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://bhakitah.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -165,17 +190,8 @@
                                     <div class="portfolio-links">
                                       <a href="https://shoe-web.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                                <div class="portfolio-wrap">
-                                  <img src="assets/img/10.png" class="img-fluid" alt="">
-                                  <div class="portfolio-info">                                  
-                                    <p>Oval Construction</p>
                                     <div class="portfolio-links">
-                                      <a href="https://mugambijavan.github.io/Oval-Construction/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                      <a href="https://shoe-web.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -188,6 +204,24 @@
                                     <p>Oval Construction</p>
                                     <div class="portfolio-links">
                                       <a href="https://mugambijavan.github.io/Oval-Construction/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/Oval-Construction/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/10.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                  
+                                    <p>Oval Construction</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/Oval-Construction/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/Oval-Construction/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -201,9 +235,13 @@
                                     <div class="portfolio-links">
                                       <a href="https://mugambijavan.github.io/One-Page/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/One-Page/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
+                              
 
                               <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                                 <div class="portfolio-wrap">
@@ -212,6 +250,9 @@
                                     <p>TechTrove</p>
                                     <div class="portfolio-links">
                                       <a href="https://tech-trove.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://tech-trove.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -225,6 +266,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://my-verse-one.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://my-verse-one.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -236,6 +280,9 @@
                                     <p>One Page</p>
                                     <div class="portfolio-links">
                                       <a href="https://mugambijavan.github.io/404-page/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/404-page/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -249,6 +296,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://equisitetastes.netlify.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://equisitetastes.netlify.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -260,6 +310,9 @@
                                     <p>Patika</p>
                                     <div class="portfolio-links">
                                       <a href="https://mugambijavan.github.io/patika/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambijavan.github.io/patika/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -273,6 +326,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://cahmyrrhbank.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://cahmyrrhbank.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -285,6 +341,9 @@
                                     <div class="portfolio-links">
                                       <a href="https://drive-connect.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                     </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://drive-connect.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
                                   </div>
                                 </div>
                               </div>
@@ -296,6 +355,9 @@
                                     <p>Capture</p>
                                     <div class="portfolio-links">
                                       <a href="https://capture-lp.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://capture-lp.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -310,7 +372,6 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
