--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         
-                            <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
                               <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                                 <div class="portfolio-wrap">
                                   <img src="assets/img/1.png" class="img-fluid" alt="">
@@ -177,6 +177,21 @@
                                     </div>
                                     <div class="portfolio-links">
                                       <a href="https://bhakitah.co.ke/"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/26.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                    
+                                    <p>Portfolio</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambi-javan.vercel.app/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambi-javan.vercel.app/"  target="_blank" ><i class="bx bx-window"></i></a>
                                     </div>
                                   </div>
                                 </div>
@@ -363,6 +378,35 @@
                                 </div>
                               </div>
 
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/25.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                 
+                                    <p>#</p>
+                                    <div class="portfolio-links">
+                                      <a href="#" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="#"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                                <div class="portfolio-wrap">
+                                  <img src="assets/img/27.png" class="img-fluid" alt="">
+                                  <div class="portfolio-info">                                 
+                                    <p>Resume</p>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambi-javan.vercel.app/resume" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    </div>
+                                    <div class="portfolio-links">
+                                      <a href="https://mugambi-javan.vercel.app/resume"  target="_blank" ><i class="bx bx-window"></i></a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
         </div>
 
       </div>
